<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/btn_logout_bg"
        android:onClick="logoutUser"
        android:text="@string/btn_logout"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LayoutLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_light" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/color_01"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnChart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_white"
                android:onClick="goChartActivity"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/charts"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnRealTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:background="@drawable/btn_rounded_white"
                android:onClick="goRealTimeActivity"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/realtime"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>